--- a/recipes/cajunpasta.html
+++ b/recipes/cajunpasta.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <main>
-    <h1 id='header'> Cajun Shrimp and Sausage Pasta Bake </h1>
+    <h1 id='header'>Cajun Shrimp and Sausage Pasta Bake</h1>
     <img src="../images/cajunpasta.jpeg">
     <h3>This Cajun shrimp and sausage pasta bake is fast to assemble featuring andouille sausage and shrimp in a creamy Cajun Alfredo sauce.</h3>
     <p></p>
@@ -46,6 +46,11 @@
         </ol>
 
     </div>
+    <div>
+        <a href="#header">Return to top</a>
+        <p></p>
+        <a href="../index.html">Return to main page</a>
 
+    </div>
 </body>
 </html>
