--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/macncheese.html">Old School Mac n' Cheese</a>
+    <p></p>
+    <a href="recipes/cajunpasta.html">Cajun Pasta Bake</a>
 </body>
 </html>
