add basic css to recipes project

--- a/recipes/cajunpasta.html
+++ b/recipes/cajunpasta.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css"/>
 </head>
 <body>
 <main>
     <h1 id='header'>Cajun Shrimp and Sausage Pasta Bake</h1>
     <img src="../images/cajunpasta.jpeg">
-    <h3>This Cajun shrimp and sausage pasta bake is fast to assemble featuring andouille sausage and shrimp in a creamy Cajun Alfredo sauce.</h3>
+    <h2>This Cajun shrimp and sausage pasta bake is fast to assemble featuring andouille sausage and shrimp in a creamy Cajun Alfredo sauce.</h2>
     <p></p>
     <div>
-        <h4>Ingredients</h4>
+        <h3>Ingredients</h3>
         <ul>
             <li>10 ounces penne pasta</li>
             <li>1 tablespoon butter</li>
@@ -21,7 +22,7 @@
             <li>8 ounces shrimp, peeled and de-veined</li>
             <li>8 ounces andouille sauasge, quartered</li>
         </ul>
-        <h4>Sauce</h4>
+        <h3>Sauce</h3>
         <ul>
             <li>1 tablespoon butter</li>
             <li>1 tablespoon flour</li>
@@ -34,7 +35,7 @@
         </ul>
     </div>
     <div>
-        <h4>Directions</h4>
+        <h3>Directions</h3>
         <ol>
             <li> Preheat the ovento 375 degrees F. Grease a 9x13-inch casserole dish. Bring a pot of lightly salted water to a boil.</li>
             <li>Melt 1 tablespoon butter in a heavy skillet. Add onion and bell pepper, and cook until softened, 3 to 5 minutes. Stir in sausage and shrimp. Turn off heat; residual heat will cook the shrimp and warm the sausage. Remoce skillet from heat after a few minutes.</li>
