--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css"/>
 </head>
 <body>
     <h1 id="header">Old School Mac n' Cheese</h1>
     <img src="../images/macncheeseimg.jpeg">
 
     <h3> Description</h3>
-    <p>This is a completely unpretentious, down-home macaroni and cheese recipe ust like my grandma and mom always made. A simple white sauce where you add cheese and a few other flavors with macaroni and a potato chip crust. This recipe makes a lot, I like to make two pans so I can take one toa p ot luck and have the other one tokeep in the fridge for later. It's an easy recipe to adjust down if you only want to make one pan. If you aren't cooking it right away, just keep the topping separate until you are ready to put it in the oven.</p>
+    <p>This is a completely unpretentious, down-home macaroni and cheese recipe ust like my grandma and mom always made. A simple white sauce where you add cheese and a few other flavors with macaroni and a potato chip crust. This recipe makes a lot, I like to make two pans so I can take one to a pot luck and have the other one to keep in the fridge for later. It's an easy recipe to adjust down if you only want to make one pan. If you aren't cooking it right away, just keep the topping separate until you are ready to put it in the oven.</p>
 <div>
-    <h4> Ingredients</h4>
+    <h3> Ingredients</h3>
     <ul> 
         <li>1 & 3/4 pounds whole wheat macaroni</li>
         <li>3/4 cup butter</l1>
@@ -31,7 +32,7 @@
         <li>butter-flavored cooking spray</li>
     </ul>
 </div>
-    <h4> Directions</h4>
+    <h3> Directions</h3>
 
     <ol> 
         <li>Preheat oven to 375 degrees F (190 degrees C).</li>
